fix: test outline button mobile click

--- a/ricardlogic-minigame.css
+++ b/ricardlogic-minigame.css
@@ -13,6 +13,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html,
